examples/invalid/semanticErr/declaration/basicTypeErr02.wacc
# type mismatch: int <- char
# Output:
# #semantic error#

#Program:#

begin
  int i = 'f'
end
